--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-this is my index page
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello This HSBk's Page</h1>
+<p>I'm hosted with GitHub Pages.</p>
+<a href="Firstpage.html">First Page</a>
+<a href="secondpage.html">Admin Page</a>
+<a href="thirdpage">User Page</a>
+</body>
+</html>
