--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 <h1>Hello This HSBk's Page</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="file:///C:/Users/hp/Desktop/Andela-Challenge/UI/Firstpage.html">First Page</a/p>
-<a href="file:///C:/Users/hp/Desktop/Andela-Challenge/UI/secondpage.html">Admin Page</a/p>
+<a href="file:///C:/Users/hp/Desktop/Andela-Challenge/UI/Firstpage.html">First Page</a>
+<a href="file:///C:/Users/hp/Desktop/Andela-Challenge/UI/secondpage.html">Admin Page</a>
 <a href="file:///C:/Users/hp/Desktop/Andela-Challenge/UI/thirdpage.html">User Page</a>
 </body>
 </html>
