--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <body>
 <h1>Hello This HSBk's Page</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<a href="file:///C:/Users/hp/Desktop/Andela-Challenge/UI/Firstpage.html">First Page</a>
-<a href="file:///C:/Users/hp/Desktop/Andela-Challenge/UI/secondpage.html">Admin Page</a>
-<a href="file:///C:/Users/hp/Desktop/Andela-Challenge/UI/thirdpage.html">User Page</a>
+<a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/Firstpage.html">First Page</a>
+<a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/secondpage.html">Admin Page</a>
+<a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/thirdpage.html">User Page</a>
 </body>
 </html>
