--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello This HSBk's Page</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
 <a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/Firstpage.html">First Page</a>
 <a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/secondpage.html">Admin Page</a>
 <a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/thirdpage.html">User Page</a>
+	
+</head><body>
+<h1>Hello This HSBk's Page</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
