--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/Firstpage.html">First Page</a>
-<a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/secondpage.html">Admin Page</a>
-<a href="https://github.com/Kyaligonza/Kyaligonza.github.io/tree/master/UI/thirdpage.html">User Page</a>
+<a href="/UI/Firstpage.html">First Page</a>
+<a href="/UI/secondpage.html">Admin Page</a>
+<a href="/UI/thirdpage.html">User Page</a>
 	
 </head><body>
 <h1>Hello This HSBk's Page</h1>
