--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <a href="/UI/Firstpage.html">First Page</a>
-<a href="/UI/secondpage.html">Admin Page</a>
-<a href="/UI/thirdpage.html">User Page</a>
+<a href="/UI/secondpage.html">User Page</a>
+<a href="/UI/thirdpage.html">Admin Page</a>
 	
 </head><body>
 <h1>Hello This HSBk's Page</h1>
