--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <a href="/UI/thirdpage.html">Admin Page</a>
 	
 </head><body>
-<h1>Hello This HSBk's Page</h1>
+<h1>Hello This is HSBk's Page</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
